# Vector2Svg

./: CMakeLists.txt  README.md  vec2svg.cpp
tinyxml2/lib/: tinyxml2.lib
tinyxml2/lib/pkgconfig/: tinyxml2.pc
